--- a/notebooks/02_pandas_practical.ipynb
+++ b/notebooks/02_pandas_practical.ipynb
@@ -88,7 +88,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "id": "PxPVtN4WKZNl"
       },
@@ -100,7 +100,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "id": "7Q6as6HbKZN6"
       },
@@ -126,7 +126,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2471,7 +2471,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 3,
       "metadata": {
         "id": "JX23HfuyKZVe"
       },
@@ -2521,13 +2521,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "xN_NbbGkKZVk",
-        "outputId": "79a4b836-84bd-4994-bb29-aac1ac9800af"
+        "outputId": "f45d29e6-c692-4fc2-c534-1f28408d6cca"
       },
       "outputs": [
         {
@@ -2599,13 +2599,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "0URJycHJKZVr",
-        "outputId": "feb6333a-95b7-4453-a79d-06078faf7036"
+        "outputId": "23b713d3-cc23-48f5-fb7a-a6a28e05759d"
       },
       "outputs": [
         {
@@ -2623,7 +2623,7 @@
             "7    246669      Bukayo Saka             None         87\n",
             "8    246669      Bukayo Saka             None         87\n",
             "9    246669      Bukayo Saka             None         87\n",
-            "Optimized SQL runtime: 11.857324123382568 seconds\n"
+            "Optimized SQL runtime: 10.961798906326294 seconds\n"
           ]
         }
       ],
@@ -2675,53 +2675,54 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
-        "id": "9cy6gD8NKZVw"
+        "id": "9cy6gD8NKZVw",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c9721a91-8a8a-4c7d-eeff-6422dfb7c39c"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "                        sprintspeed     sprintspeed_diff\n",
+            "                                max min                 \n",
+            "teamname                                                \n",
+            "Heidenheim                       97  17               80\n",
+            "Real Madrid                      97  19               78\n",
+            "AZ                               95  17               78\n",
+            "*TeamName_Abbr15_114019          79   1               78\n",
+            "RB Leipzig                       95  17               78\n",
+            "Pandas runtime: 0.26849937438964844 seconds\n"
+          ]
+        }
+      ],
       "source": [
-        "import pandas as pd\n",
-        "import sqlite3\n",
-        "import time\n",
-        "\n",
-        "conn = sqlite3.connect(\"football.db\")\n",
-        "\n",
+        "players = pd.read_csv('football_data/players.csv')\n",
+        "# sprint speed\n",
         "start = time.time()\n",
-        "query = \"\"\"\n",
-        "WITH team_speed_stats AS (\n",
-        "    SELECT\n",
-        "        t.teamname,\n",
-        "        t.teamid,\n",
-        "        MAX(p.sprintspeed) as fastest_player_speed,\n",
-        "        MIN(p.sprintspeed) as slowest_player_speed,\n",
-        "        MAX(p.sprintspeed) - MIN(p.sprintspeed) as speed_difference,\n",
-        "        COUNT(p.playerid) as total_players\n",
-        "    FROM teams t\n",
-        "    JOIN teamplayerlinks tpl ON t.teamid = tpl.teamid\n",
-        "    JOIN players p ON tpl.playerid = p.playerid\n",
-        "    WHERE p.sprintspeed IS NOT NULL\n",
-        "    GROUP BY t.teamid, t.teamname\n",
-        "    HAVING COUNT(p.playerid) >= 5  -- Only teams with at least 5 players\n",
-        ")\n",
-        "SELECT\n",
-        "    teamname,\n",
-        "    speed_difference,\n",
-        "    fastest_player_speed,\n",
-        "    slowest_player_speed,\n",
-        "    total_players\n",
-        "FROM team_speed_stats\n",
-        "ORDER BY speed_difference DESC\n",
-        "LIMIT 10;\n",
-        "\"\"\"\n",
-        "\n",
-        "speed_difference_results = pd.read_sql_query(query, conn)\n",
-        "print(\"Teams with Biggest Speed Difference (Fastest vs Slowest Player):\")\n",
-        "print(\"=\" * 70)\n",
-        "print(speed_difference_results)\n",
-        "print(f\"\\nQuery runtime: {time.time() - start:.4f} seconds\")\n",
-        "\n",
-        "conn.close()"
+        "players = players[players['sprintspeed'] > 0]\n",
+        "players= players.sort_values(by='sprintspeed', ascending=False)\n",
+        "players\n",
+        "teams = pd.read_csv('football_data/teams.csv')\n",
+        "teams = teams[teams['teamid'] > 0]\n",
+        "teams\n",
+        "tp_links = pd.read_csv('football_data/teamplayerlinks.csv')\n",
+        "tp_links\n",
+        "tp_links = tp_links[tp_links['playerid'] > 0]\n",
+        "tp_links\n",
+        "joined_df = players.merge(tp_links, on='playerid', how='inner')\n",
+        "joined_df = joined_df.merge(teams, on='teamid', how='inner')\n",
+        "joined_df\n",
+        "joined_df = joined_df.groupby('teamname').agg({'sprintspeed': ['max', 'min']})\n",
+        "joined_df\n",
+        "joined_df['sprintspeed_diff'] = joined_df['sprintspeed']['max'] - joined_df['sprintspeed']['min']\n",
+        "joined_df = joined_df.sort_values(by='sprintspeed_diff', ascending=False)\n",
+        "print(joined_df.head(5))\n",
+        "print(\"Pandas runtime:\", time.time() - start, \"seconds\")"
       ],
       "id": "9cy6gD8NKZVw"
     },
@@ -2743,7 +2744,29 @@
       },
       "outputs": [],
       "source": [
-        "# TODO"
+        "queries = [\n",
+        "     \"CREATE INDEX IF NOT EXISTS idx_players_nationality ON players(nationality);\",\n",
+        " ]\n",
+        "for q in queries:\n",
+        "     cur.execute(q)\n",
+        "\n",
+        "start = time.time()\n",
+        "query = \"\"\"\n",
+        " SELECT t.teamname, COUNT(DISTINCT nationality) AS num_nationalities\n",
+        " FROM players p\n",
+        " JOIN teamplayerlinks tpl ON p.playerid = tpl.playerid\n",
+        " JOIN teams t ON tpl.teamid = t.teamid\n",
+        " GROUP BY t.teamid\n",
+        " ORDER BY num_nationalities DESC\n",
+        " LIMIT 5;\n",
+        " \"\"\"\n",
+        "cur.execute(query)\n",
+        "results = cur.fetchall()\n",
+        "print(time.time() - start)\n",
+        "for q in queries:\n",
+        "     cur.execute(q)\n",
+        "\n",
+        "print(results)"
       ],
       "id": "COaye8NaKZV1"
     },
