--- a/notebooks/02_pandas_practical.ipynb
+++ b/notebooks/02_pandas_practical.ipynb
@@ -3088,7 +3088,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "id": "-XkYLjAWKZWV"
       },
@@ -3110,14 +3110,56 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
-        "id": "CBCRISoZKZWY"
+        "id": "CBCRISoZKZWY",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6c2997a3-d384-4ef6-ca83-9ea62b8fe6a2"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            " 0.578 \n",
+            "     teamid            teamname  max_overallrating\n",
+            "0         2         Aston Villa                 86\n",
+            "1         3    Blackburn Rovers                 72\n",
+            "2         4              Bolton                 68\n",
+            "3         5             Chelsea                 87\n",
+            "4         7             Everton                 83\n",
+            "..      ...                 ...                ...\n",
+            "119  116327  Atlético de Madrid                 83\n",
+            "120  116343           Liverpool                 76\n",
+            "121  116417           FC Nantes                 79\n",
+            "122  131358          SL Benfica                 80\n",
+            "123  131724          Strasbourg                 81\n",
+            "\n",
+            "[124 rows x 3 columns]\n"
+          ]
+        }
+      ],
       "source": [
-        "# todo\n",
-        "# the query below should take about 0.1s"
+        "q = \"\"\"\n",
+        "SELECT\n",
+        "  t.teamid,\n",
+        "  t.teamname,\n",
+        "  MAX(p.overallrating) AS max_overallrating\n",
+        "FROM teamplayerlinks AS l\n",
+        "JOIN players AS p ON p.playerid = l.playerid\n",
+        "JOIN teams AS t ON t.teamid = l.teamid\n",
+        "WHERE t.teamname IN ({})\n",
+        "GROUP BY t.teamid, t.teamname;\n",
+        "\"\"\".format(','.join(['?'] * len(teams_list)))\n",
+        "\n",
+        "start = time.time()\n",
+        "\n",
+        "df = pd.read_sql_query(q, conn, params=teams_list.tolist())\n",
+        "\n",
+        "print(f\" {time.time() - start:.3f} \")\n",
+        "print(df)"
       ],
       "id": "CBCRISoZKZWY"
     },
